--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,12 +8,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Moru">
+        android:theme="@style/Theme.Moru"
+        android:screenOrientation="sensorPortrait"
+        >
         <activity
+            android:screenOrientation="portrait"
             android:name=".ui.register.RegisterActivity"
             android:exported="false" />
 
         <activity
+            android:screenOrientation="portrait"
             android:name=".ui.splash.SplashActivity"
             android:exported="true">
             <intent-filter>
@@ -25,6 +29,7 @@
 <!--            android:name=".ui.login.LoginActivity"-->
 <!--            android:exported="false" />-->
         <activity
+            android:screenOrientation="portrait"
             android:name=".ui.login.LoginActivity"
             android:exported="true">
             <intent-filter>
