add: item routine pick :rocket:

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,14 +11,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Moru">
         <activity
-            android:name=".AlarmActivity"
-            android:exported="false"
-            android:label="@string/title_activity_alarm"
-            android:theme="@style/Theme.Moru.NoActionBar" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="false"
-            android:label="@string/title_activity_main" />
+            android:name=".ui.add_routine.AddRoutineActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.register.RegisterActivity"
             android:exported="false"
