--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,7 @@
             android:label="@string/title_activity_pick_routine"
             android:theme="@style/Theme.Moru.NoActionBar" />
         <activity
-            android:name=".ui.register.RegisterActivity"
+            android:name=".ui.auth.register.RegisterActivity"
             android:exported="false"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity" />
@@ -67,7 +67,7 @@
         <!-- android:name=".ui.login.LoginActivity" -->
         <!-- android:exported="false" /> -->
         <activity
-            android:name=".ui.login.LoginActivity"
+            android:name=".ui.auth.login.LoginActivity"
             android:exported="true"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity">
