--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,9 +28,9 @@
         <activity
             android:name=".ui.fill.FillExercisePrefActivity"
             android:exported="false" />
-        <activity
-            android:name=".ui.routine_detail.RoutineDetailExercise"
-            android:exported="false" />
+<!--        <activity-->
+<!--            android:name=".ui.routine_detail.RoutineDetailExercise"-->
+<!--            android:exported="false" />-->
         <activity
             android:name=".ui.fill.FillBookPrefActivity"
             android:exported="false" />
@@ -67,6 +67,7 @@
             android:name=".ui.MainActivity"
             android:exported="false"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"
             tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".ui.splash.SplashActivity"
