--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
+    <uses-permission android:name="android.permission.USE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
@@ -13,10 +19,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Moru"
         android:usesCleartextTraffic="true">
+        <activity
+            android:name=".ui.subscription.GetSubscriptionActivity"
+            android:exported="false" />
+
         <receiver
-            android:name=".AlarmReceiver"
+            android:name=".ui.alarm.receiver.AlarmReceiver"
             android:enabled="true"
-            android:exported="true"></receiver>
+            android:exported="false" />
 
         <activity
             android:name=".ui.add_routine.add_custom_routine.AddCustomRoutineActivity"
