--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
@@ -18,7 +18,13 @@
         android:screenOrientation="sensorPortrait"
         android:supportsRtl="true"
         android:theme="@style/Theme.Moru"
-        android:usesCleartextTraffic="true">
+        android:usesCleartextTraffic="true" >
+        <activity
+            android:name=".ui.detail.user_routine.DetailUserBookRoutineActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.detail.user_routine.DetailUserExerciseRoutineActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.subscription.GetSubscriptionActivity"
             android:exported="false" />
@@ -38,7 +44,7 @@
             android:name=".ui.detail.exercise_routine.DetailExerciseActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.detail.user_routine.DetailRoutineActivity"
+            android:name=".ui.alarm.AlarmActivity"
             android:exported="false" />
         <activity
             android:name=".ui.fill.FillExercisePrefActivity"
@@ -87,7 +93,7 @@
             android:name=".ui.splash.SplashActivity"
             android:exported="true"
             android:screenOrientation="portrait"
-            tools:ignore="LockedOrientationActivity">
+            tools:ignore="LockedOrientationActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -100,7 +106,7 @@
             android:name=".ui.auth.login.LoginActivity"
             android:exported="true"
             android:screenOrientation="portrait"
-            tools:ignore="LockedOrientationActivity">
+            tools:ignore="LockedOrientationActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
