--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,9 +21,11 @@
         android:usesCleartextTraffic="true" >
         <activity
             android:name=".ui.detail.user_routine.DetailUserBookRoutineActivity"
+            android:windowSoftInputMode="adjustPan"
             android:exported="false" />
         <activity
             android:name=".ui.detail.user_routine.DetailUserExerciseRoutineActivity"
+            android:windowSoftInputMode="adjustPan"
             android:exported="false" />
         <activity
             android:name=".ui.subscription.GetSubscriptionActivity"
@@ -36,15 +38,20 @@
 
         <activity
             android:name=".ui.add_routine.add_custom_routine.AddCustomRoutineActivity"
+            android:windowSoftInputMode="adjustPan"
             android:exported="false" />
+
         <activity
             android:name=".ui.detail.book_routine.DetailBookActivity"
+            android:windowSoftInputMode="adjustPan"
             android:exported="false" />
         <activity
             android:name=".ui.detail.exercise_routine.DetailExerciseActivity"
+            android:windowSoftInputMode="adjustPan"
             android:exported="false" />
         <activity
             android:name=".ui.alarm.AlarmActivity"
+            android:windowSoftInputMode="adjustPan"
             android:exported="false" />
         <activity
             android:name=".ui.fill.FillExercisePrefActivity"
@@ -58,23 +65,28 @@
             android:name=".ui.fill.FillProfileActivity"
             android:exported="false"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"
             tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".ui.intro.IntroActivity"
             android:exported="false"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"
             tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".ui.profile.profile_data.ProfileDataActivity"
+            android:windowSoftInputMode="adjustPan"
             android:exported="false" />
         <activity
             android:name=".ui.profile.change_password.ChangePasswordActivity"
             android:exported="false" />
         <activity
             android:name=".ui.add_routine.pick_schedule.PickScheduleActivity"
+            android:windowSoftInputMode="adjustPan"
             android:exported="false" />
         <activity
             android:name=".ui.add_routine.pick_routine.PickRoutineActivity"
+            android:windowSoftInputMode="adjustPan"
             android:exported="false"
             android:label="@string/title_activity_pick_routine"
             android:theme="@style/Theme.Moru.NoActionBar" />
@@ -82,6 +94,7 @@
             android:name=".ui.auth.register.RegisterActivity"
             android:exported="false"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"
             tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".ui.MainActivity"
@@ -106,6 +119,7 @@
             android:name=".ui.auth.login.LoginActivity"
             android:exported="true"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"
             tools:ignore="LockedOrientationActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
