--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
@@ -18,15 +18,21 @@
         android:screenOrientation="sensorPortrait"
         android:supportsRtl="true"
         android:theme="@style/Theme.Moru"
-        android:usesCleartextTraffic="true" >
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".ui.alarm.web_view.ExerciseVideoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.alarm.web_view.BookViewActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.detail.user_routine.DetailUserBookRoutineActivity"
-            android:windowSoftInputMode="adjustPan"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".ui.detail.user_routine.DetailUserExerciseRoutineActivity"
-            android:windowSoftInputMode="adjustPan"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".ui.subscription.GetSubscriptionActivity"
             android:exported="false" />
@@ -38,21 +44,20 @@
 
         <activity
             android:name=".ui.add_routine.add_custom_routine.AddCustomRoutineActivity"
-            android:windowSoftInputMode="adjustPan"
-            android:exported="false" />
-
+            android:exported="false"
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".ui.detail.book_routine.DetailBookActivity"
-            android:windowSoftInputMode="adjustPan"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".ui.detail.exercise_routine.DetailExerciseActivity"
-            android:windowSoftInputMode="adjustPan"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".ui.alarm.AlarmActivity"
-            android:windowSoftInputMode="adjustPan"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".ui.fill.FillExercisePrefActivity"
             android:exported="false" /> <!-- <activity -->
@@ -75,21 +80,21 @@
             tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".ui.profile.profile_data.ProfileDataActivity"
-            android:windowSoftInputMode="adjustPan"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".ui.profile.change_password.ChangePasswordActivity"
             android:exported="false" />
         <activity
             android:name=".ui.add_routine.pick_schedule.PickScheduleActivity"
-            android:windowSoftInputMode="adjustPan"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".ui.add_routine.pick_routine.PickRoutineActivity"
-            android:windowSoftInputMode="adjustPan"
             android:exported="false"
             android:label="@string/title_activity_pick_routine"
-            android:theme="@style/Theme.Moru.NoActionBar" />
+            android:theme="@style/Theme.Moru.NoActionBar"
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".ui.auth.register.RegisterActivity"
             android:exported="false"
@@ -106,7 +111,7 @@
             android:name=".ui.splash.SplashActivity"
             android:exported="true"
             android:screenOrientation="portrait"
-            tools:ignore="LockedOrientationActivity" >
+            tools:ignore="LockedOrientationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -120,7 +125,7 @@
             android:exported="true"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan"
-            tools:ignore="LockedOrientationActivity" >
+            tools:ignore="LockedOrientationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
