--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,8 @@ dependencies {
     implementation "androidx.paging:paging-runtime-ktx:3.1.1"
     implementation 'androidx.room:room-ktx:2.6.0-alpha01'
     implementation 'androidx.appcompat:appcompat:1.7.0-alpha02'
+
+    implementation "androidx.camera:camera-camera2:1.2.2"
+    implementation "androidx.camera:camera-lifecycle:1.2.2"
+    implementation "androidx.camera:camera-view:1.2.2"
 }
