add: history and fix alarm :rocket:

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,6 @@ android {
         dataBinding true
         buildConfig true
     }
-
 }
 
 dependencies {
@@ -78,4 +77,6 @@ dependencies {
     implementation "androidx.camera:camera-camera2:1.2.2"
     implementation "androidx.camera:camera-lifecycle:1.2.2"
     implementation "androidx.camera:camera-view:1.2.2"
+
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 }
